# SimpleFOCStudio

./: SimpleFOCStudio.spec  pyproject.toml
simplefocstudio/: pyinstaller_command_windows.txt  simpleFOCStudio.py
simplefocstudio/gui/: mainWindow.py  toolbar.py  workAreaTabbedWidget.py
simplefocstudio/gui/commandlinetool/: commandlinetool.py  configureConnectionWidget.py
simplefocstudio/gui/configtool/: configureConnectionDialog.py  connectionControl.py  controlLoopConfig.py  deviceConfigurationTool.py  deviceInteractionFrame.py  deviceJoggingControl.py  deviceTreeview.py  devicesInspectorTree.py  droDisplayWidget.py  generalControls.py  generalSettingsWidget.py  generatedCodeDisplay.py  graphicWidget.py  pidConfiguration.py  torqueConfig.py  treeViewConfigTool.py
simplefocstudio/gui/sharedcomnponets/: commandLineInterface.py
