[tool.poetry]
name = "simplefocstudio"
version = "2.0"
description = "A GUI based in PyQT5 and PyQtGraph to configure and control SimpleFOC devices."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyqt5 = "^5.15.9"
pyqtgraph = "^0.13.3"
pyserial = "^3.5"
numpy = "^1.25.2"
pyinstaller = "^5.13.2"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
